# project_homework_10_1

./: .gitignor  .gitignore  README.md  pyproject.toml  test_log.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: data_reader.py  decorators.py  generators.py  main.py  masks.py  processing.py  transactions.py  utils.py  widget.py
test/: test_data_reader.py  test_decorators.py  test_generators.py  test_main.py  test_mask.py  test_masks.py  test_processing.py  test_transactions.py  test_utils.py  test_widget.py
