[project]
name = "project-homework-10-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Igor",email = "smeshnoy111@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "generators (>=2020.4.27,<2021.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0"
black = "^25.1.0"
isort = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.div.dependencies]
mypy = "^1.15.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py

)
'''

[tool.isort]
line_length = 119